--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,4 +42,6 @@ jobs:
           script: |
             cd /home/thefifthfleet.com/
             git clone https://github.com/NickITGuy/thefifthfleet.com.git
+            npm install
+            npm build
             npm start
