see if I can get action to exit

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,4 +44,4 @@ jobs:
             git clone https://github.com/NickITGuy/thefifthfleet.com.git
             npm install
             npm run build
-            npm start
+            npm start & npx wait-on http://localhost:3000
